--- a/content/var-freq.tex
+++ b/content/var-freq.tex
@@ -1,42 +1,42 @@
 \begin{table}[!htp]
 \centering
-\caption{Die Amplituden und Phasenverschiebung in Frequenzabhänigkeit mit $U_0 = 6.55$ V.}
+\caption{Die Amplituden und Phasenverschiebung in Frequenzabhänigkeit mit zuvor gemessenem $U_0 = 6,\~55$ V.}
 \label{tab:var-freq}
-\begin{tabular}{S[table-format=2] S[table-format=2.1] S[table-format=1.2]}
+\begin{tabular}{S[table-format=2] S[table-format=2.1] S[table-format=1.2] S[table-format=1.2]}
 \toprule
-{$f$ / kHz} & {$U_C$ / V} & {$\Delta t$ / µs} \\
+{$f$ / kHz} & {$U_\text{C}$ / V} & {$\frac{U_\text{C}}{U_0}$} & {$\Delta t$ / µs} \\
 \midrule
-12 & 7.2 & 1.2 \\
-14 & 7.8 & 1.5 \\
-16 & 8.1 & 1.5 \\
-18 & 8.3 & 1.6 \\
-20 & 9.0 & 1.7 \\
-22 & 9.5 & 1.8 \\
-24 & 10.3 & 2.2 \\
-26 & 11.3 & 2.5 \\
-28 & 12.4 & 2.9 \\
-30 & 13.8 & 3.4 \\
-32 & 15.2 & 4.2 \\
-33 & 16.0 & 4.6 \\
-34 & 16.5 & 5.1 \\
-35 & 16.8 & 5.6 \\
-36 & 16.8 & 6.3 \\
-37 & 16.5 & 6.8 \\
-38 & 15.9 & 7.3 \\
-39 & 15.1 & 7.7 \\
-40 & 14.2 & 8.0 \\
-41 & 13.2 & 8.2 \\
-42 & 12.2 & 8.3 \\
-44 & 10.5 & 8.5 \\
-46 & 9.0 & 8.5 \\
-48 & 7.5 & 8.4 \\
-50 & 6.5 & 8.28 \\
-52 & 5.7 & 8.08 \\
-54 & 5.1 & 7.84 \\
-56 & 4.6 & 7.72 \\
-58 & 4.1 & 7.48 \\
-60 & 3.7 & 7.28 \\
-62 & 3.4 & 7.08 \\
+12 &  7.2 & 1.10 & 1.2 \\
+14 &  7.8 & 1.19 & 1.5 \\
+16 &  8.1 & 1.24 & 1.5 \\
+18 &  8.3 & 1.27 & 1.6 \\
+20 &  9.0 & 1.37 & 1.7 \\
+22 &  9.5 & 1.45 & 1.8 \\
+24 & 10.3 & 1.57 & 2.2 \\
+26 & 11.3 & 1.73 & 2.5 \\
+28 & 12.4 & 1.89 & 2.9 \\
+30 & 13.8 & 2.11 & 3.4 \\
+32 & 15.2 & 2.32 & 4.2 \\
+33 & 16.0 & 2.44 & 4.6 \\
+34 & 16.5 & 2.52 & 5.1 \\
+35 & 16.8 & 2.56 & 5.6 \\
+36 & 16.8 & 2.56 & 6.3 \\
+37 & 16.5 & 2.52 & 6.8 \\
+38 & 15.9 & 2.43 & 7.3 \\
+39 & 15.1 & 2.31 & 7.7 \\
+40 & 14.2 & 2.17 & 8.0 \\
+41 & 13.2 & 2.02 & 8.2 \\
+42 & 12.2 & 1.86 & 8.3 \\
+44 & 10.5 & 1.60 & 8.5 \\
+46 &  9.0 & 1.37 & 8.5 \\
+48 &  7.5 & 1.15 & 8.4 \\
+50 &  6.5 & 0.99 & 8.28 \\
+52 &  5.7 & 0.87 & 8.08 \\
+54 &  5.1 & 0.78 & 7.84 \\
+56 &  4.6 & 0.70 & 7.72 \\
+58 &  4.1 & 0.63 & 7.48 \\
+60 &  3.7 & 0.56 & 7.28 \\
+62 &  3.4 & 0.52 & 7.08 \\
 \bottomrule
 \end{tabular}
 \end{table}
