--- a/content/zeit-amplitude.tex
+++ b/content/zeit-amplitude.tex
@@ -1,27 +1,27 @@
 \begin{table}[!htp]
 \centering
-\caption{Die Amplituden zu den jeweiligen Zeitpunkten zur Bestimmung des Dämpfungswiderstandes.}
+\caption{Die Amplituden einer gedämpften harmonischen Schwingung zu den jeweiligen Zeitpunkten zur Bestimmung des Dämpfungswiderstandes.}
 \label{tab:zeit-amplitude}
-\begin{tabular}{S[table-format=3.0] S[table-format=1.2]}
+\begin{tabular}{S[table-format=3.0] S[table-format=1.2] S[table-format=2.2]}
 \toprule
-{$t$ / µs} & {$U$ / V} \\
+{$t$ / µs} & {$U_\text{C}$ / V} & {$\ln\bigg(\frac{U_\text{C}}{1 \si{V}}\bigg)$} \\
 \midrule
-14 & 8.16 \\
-27 & 6.80 \\
-41 & 5.92 \\
-54 & 4.96 \\
-68 & 4.40 \\
-81 & 3.60 \\
-95 & 3.20 \\
-108 & 2.72 \\
-122 & 2.32 \\
-136 & 2.00 \\
-149 & 1.68 \\
-162 & 1.44 \\
-176 & 1.28 \\
-189 & 1.12 \\
-203 & 0.96 \\
-217 & 0.80 \\
+14 &  8.16 & 2.10 \\
+27 &  6.80 & 1.92 \\
+41 &  5.92 & 1.78 \\
+54 &  4.96 & 1.60 \\
+68 &  4.40 & 1.48 \\
+81 &  3.60 & 1.28 \\
+95 &  3.20 & 1.16 \\
+108 & 2.72 & 1.00 \\
+122 & 2.32 & 0.84 \\
+136 & 2.00 & 0.69 \\
+149 & 1.68 & 0.52 \\
+162 & 1.44 & 0.36 \\
+176 & 1.28 & 0.25 \\
+189 & 1.12 & 0.11 \\
+203 & 0.96 & -0.04 \\
+217 & 0.80 & -0.22 \\
 \bottomrule
 \end{tabular}
 \end{table}
