--- a/content/diskussion.tex
+++ b/content/diskussion.tex
@@ -6,12 +6,12 @@ Diese systematische Abweichung lässt sich durch Kabelwiderstände sowie Innenwi
 
 Der experimentell bestimmte Wert für den Widerstand, bei dem der aperiodische Grenzfall einsetzt, beträgt $R_\text{ap} = (1355 \pm 5)$ $\symup{\Omega}$. Dies ist lediglich $80 \%$ des Theoriewertes von $R_\text{theo} = 1678$ $\symup{\Omega}$.
 Diese Abweichung lässt sich ebenfalls durch weitere Innenwiderstände erklären. Des Weiteren kann nicht ausgeschlossen werden, dass der zur Messung verwendete Tastkopf nicht einen frequenzabhängigen Widerstand hat.
-Die Theoriekurve in \autoref{fig:guete} bestätigt dies, da die Messwerte bei hoher Frequenz immer weiter von dieser abweichen.
+Die Theoriekurve in \autoref{fig:guete} bestätigt dies, da die Messwerte bei auf Höhe der Resonanzfrequenz stark von dieser Abweichen, während die Werte bei geringer und hoher Frequenz jeweils gut durch die Theoriekurve genähert werden.
 
 Die experimentell bestimmte Güte des Systems $q = 2,\~56$ beträgt lediglich $83 \%$ des Theoriewertes von $q_\text{theo} = 3,\~09$. Da die Güte sich aus der Spannungsamplitude bestimmt, welche mit steigendem Widerstand sinkt, kann diese Verringerung ebenfalls durch nicht beachtete Widerstände erklären.
 
-Die Werte für $\omega_1 = 2,\~1 \cdot 10^{5}$ $\frac{1}{\symup{s}}$ und $\omega_2 = 2,\~8 \cdot 10^{5}$ $\frac{1}{\symup{s}}$ weichen beide jeweils nur sehr gering von den Theoriewerten ab.
-Dies ist ebenfalls gut an dem Plot in \autoref{fig:phase} zu sehen. Die Messwerte werden hier gut von der Theoriekurve genähert. Jedoch werden die Abweichungen um $\omega_\text{res} = 2,\~2 \cdot 10^{5}$ $\frac{1}{\symup{s}}$ und bei hohen Frequenzen größer.
+Die Werte für $\omega_1 = 2,\~1 \cdot 10^{5}$ Hz und $\omega_2 = 2,\~8 \cdot 10^{5}$ Hz weichen beide jeweils nur sehr gering von den Theoriewerten ab.
+Dies ist ebenfalls gut an dem Plot in \autoref{fig:phase} zu sehen. Die Messwerte werden hier gut von der Theoriekurve genähert. Jedoch werden die Abweichungen um $\omega_\text{res} = 2,\~2 \cdot 10^{5}$ Hz und bei hohen Frequenzen größer.
 Dies lässt sich durch frequenzabhängige Induktivitäten, Kapazitäten sowie Widerstände erklärt werden. Diese Abhängigkeit scheint sich größtenteils gegen sich selbst zu kürzen. Darüber lässt sich die Abweichung der Resonanzfrequenz von dem Theoriewerte ebenfalls erklären.
 
 Generell kommen durch Ungenauigkeiten beim Ablesen des Oszilloskopes weitere Abweichungen zu Stande. Diese werden in der Auswertung jedoch nicht näher betrachtet.
