--- a/content/durchfuehrung.tex
+++ b/content/durchfuehrung.tex
@@ -2,11 +2,11 @@
 \label{sec:Durchführung}
     \subsection{Untersuchung der Zeitabhängigkeit der Schwingungsamplituden}
         Mithilfe der Schaltung welche in \autoref{fig:schaltung1} zusehen ist wird die Zeitabhängigkeit der Schwingungsamplituden des LRC-Kreises gemessen.
-        Ein Nadelimpulsgenerator erregt den Schwingkreis zu gedämpften Schwingungen. Mittels eines Tastkopfes, welcher die Schwingung zwischen Spule
+        Ein Funktionsgenerator gibt Nadelimpulse auf den Schwingkreis und erregt diesen so zu gedämpften Schwingungen. Mittels eines Tastkopfes, welcher die Schwingung zwischen Spule
         und Kondensator abnimmt, wird diese auf einen digitalen Oszillographen ausgegeben. Durch Verwendung des hochohmigen Tastkopfes ist der 
         Eingangswiderstand der Oszillographen vernachlässigbar klein. 
         Zu Beachten ist weiterhin den kleineren der beiden Festwiderstände zu verwenden.
-        Mit der Cursor-Funktion des Oszillographen sind die Zusammenhänge von Zeitpunkt und Schwingungsamplituden zu messen und aufzunehmen.
+        Mit der Cursor-Funktion des Oszillographen werden die Zusammenhänge von Zeitpunkt und Schwingungsamplituden gemessen und aufgenommen.
         \begin{figure}
             \centering
             \includegraphics[width=\textwidth]{content/s1.png}
@@ -20,10 +20,10 @@
         Der Widerstand ist dann so einzustellen, dass dieses Überschwingen gerade wieder verschwindet. Der eingestellte Widerstand wird aufgenommen.
     \subsection{Untersuchung der Frequenzabhängigkeit der Kondensatorspannung}
         Für diesen Versuchsteil wird die Schaltung wie in \autoref{fig:schaltung2} zu sehen aufgebaut, jedoch ohne die Nutzung des Zweitkanals des Oszillographen.
-        Der Sinuswellengenerator gibt sinusförmige Wellen verschiedener Frequenzen auf den LRC-Kreis. Wie zuvor gibt ein Tastkopf die Schwingung
+        Der Sinuswellengenerator gibt sinusförmige Wellen verschiedener Frequenzen auf den LRC-Kreis. Wie zuvor gibt ein Tastkopf die Spannung $U_{\symup{C}}$
         wieder auf dem Oszillographen aus. Zuvor wird mithilfe des Tastkopfes die reine Erregerspannung gemessen und aufgenommen. Zu Beachten 
         ist weiterhin, dass in diesem Aufbau der größere der beiden Festwiderstände zu Benutzen ist. In Abhängigkeit der eingestellten Frequenzen
-        werden nun die auf dem Oszillographen ausgegebenen Amplituden mittels der Cursor-Funktion ausgemessen und in Abhängigkeit der eingestellten
+        werden die auf dem Oszillographen ausgegebenen Amplituden mittels der Cursor-Funktion ausgemessen und in Abhängigkeit der eingestellten
         Frequenz aufgenommen. Die einzustellenden Frequenzen sind im Bereich von $12$\,kHz bis $30$\,kHz und $44$\,kHz bis $62$\,kHz in $2$\,kHz Schritten zu wählen;
         im Bereich von $32$\,kHz bis $42$\,kHz sind $1$\,kHz Schritte zu wählen.
         \begin{figure}
@@ -34,5 +34,5 @@
         \end{figure} 
     \subsection{Untersuchung der Frequenzabhängigkeit der Phasendifferenz}
         Es wird wieder die Schaltung \autoref{fig:schaltung2} verwendet, diesmal jedoch unter Nutzung beider Oszillographeneingänge. Der Oszillograph
-        zeigt nun zwei Kurven an. Der Abstand der Nulldurchgänge der beiden Kurven ist mittels der Oszillographen auszumessen und in 
+        zeigt nun zwei Kurven an. Der Abstand der beiden Kurven auf der Nulllinie ist mittels der Oszillographen auszumessen und in 
         Abhängigkeit von der Frequenz zu notieren. Die einzustellenden Frequenzen sind die Selben, wie im Versuchsteil zuvor.    
