--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -16,15 +16,15 @@
         Schwingungen. Nach dem zweiten Kirchhoff'schen Gesetz folgt für den vorhandenen Aufbau wie in \autoref{fig:theorie}
         \begin{equation}
             \label{eqn:kirchhoff}
-            U_R(t) + U_C(t) + U_L(t) = 0.
+            U_{\symup{R}}(t) + U_{\symup{C}}(t) + U_{\symup{L}}(t) = 0.
         \end{equation}
         Hieraus lässt sich mittels der Beziehungen
         \\ \\
-        \centerline{$U_R(t) = R \cdot I(t)$,}
-        \centerline{$U_C(t) = \frac{Q(t)}{C}$, wobei $I = \frac{d \, Q}{d \, t}$,}
+        \centerline{$U_{\symup{R}}(t) = R \cdot I(t)$,}
+        \centerline{$U_{\symup{C}}(t) = \frac{Q(t)}{C}$, wobei $I = \frac{d \, Q}{d \, t}$,}
         und
         \\ \\
-        \centerline{$U_L(t) = L \cdot \frac {d \, I} {d \, t} $}
+        \centerline{$U_{\symup{L}}(t) = L \cdot \frac {d \, I} {d \, t} $}
         \\ \\
         die Differentialgleichung 
         \begin{equation}
@@ -104,7 +104,7 @@
         Die Kondensatorspannung kann auch in Abhängigkeit von der Winkelgeschwindigkeit $\omega$ angegeben werden zu
         \begin{equation}
             \label{eqn:Kondensatorspannung}
-            U_C(\omega) = \frac {U_0} {(1 - L C \omega^2)^2 + \omega^2 R^2 C^2}.
+            U_{\symup{C}}(\omega) = \frac {U_0} {(1 - L C \omega^2)^2 + \omega^2 R^2 C^2}.
         \end{equation}
         Bei näherer Betrachtung von Gleichung \eqref{eqn:Kondensatorspannung} lässt sich feststellen, dass die Kondensatorspannung
         ein Maximum erreicht, welches größer sein kann als die Erregerspannung. Dies wird Resonanz genannt und tritt bei der Resonanzfrequenz
