--- a/content/durchfuehrung.tex
+++ b/content/durchfuehrung.tex
@@ -34,5 +34,5 @@
         \end{figure} 
     \subsection{Untersuchung der Frequenzabhängigkeit der Phasendifferenz}
         Es wird wieder die Schaltung \autoref{fig:schaltung2} verwendet, diesmal jedoch unter Nutzung beider Oszillographeneingänge. Der Oszillograph
-        zeigt nun zwei Kurven an. Der Abstand der beiden Kurven auf der Nulllinie ist mittels der Oszillographen auszumessen und in 
+        zeigt nun zwei Kurven an. Der Abstand der Nullstellen der beiden Kurven ist mittels des Oszillographen auszumessen und in 
         Abhängigkeit von der Frequenz zu notieren. Die einzustellenden Frequenzen sind die Selben, wie im Versuchsteil zuvor.    
